<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grey_gradient"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:backgroundTint="#FF5F1F"
                android:onClick="clearbut"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bracketbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="bracketbut"
                android:text="@string/bracket"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/exponentbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="exponentbut"
                android:text="@string/exponent"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dividebut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="dividebut"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="sevenbut"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eightbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="eightbut"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ninebut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="ninebut"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiplybut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="multiplybut"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="fourbut"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fivebut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="fivebut"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sixbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="sixbut"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/subbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="subbut"
                android:text="@string/sub"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/onebut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="onebut"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/twobut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="twobut"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/threebut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="threebut"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:onClick="addbut"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="plusminusbut"
                android:text="@string/plusMinus"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zerobut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="zerobut"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pointbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybackground"
                android:onClick="pointbut"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equalsbut"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/darkgreybackgroung"
                android:backgroundTint="#6B8E23"
                android:onClick="equalsbut"
                android:text="@string/equals"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="381dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:hint="enter your number"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textColor="@drawable/orangebackground"
        android:textSize="39sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backspacebut"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yellow"
        android:contentDescription="@string/backspace"
        android:onClick="backspacebut"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backspace" />
</androidx.constraintlayout.widget.ConstraintLayout>